--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-       <header>
-        <h1>Vai ser uma imagem aqui</h1>
-        <ul>
+       <header class="cabecalho">
+      <img class="cabecalho imagem" src="https://cdn.acritica.net/img/pc/450/300/dn_arquivo/2023/03/unnamed_2.jpg" alt="capivara">
             <li>Escola</li>
             <li>Estudante</li>
         </ul>
